# CUDA-tutorial

./: CMakeLists.txt  README.md
include/: kernal.h  threads.h
source/: kernal.cu  main.cu  threads.cu
